--- a/content/chap02.tex
+++ b/content/chap02.tex
@@ -304,7 +304,8 @@ c = \sum\limits_{j = 1}^m {{e_j}{p_{i \times k + j}}}
 总结一下，\emph{ACK on degree of freedom}就是说我不再对原始数据包进行ACK确认，而是确认\emph{自由度}。只要接收端看到了某个报文（ see a packet )，即使没有解出来，依然可以回复发送端对seen packet的确认。
 \subsection{TCP/NC原理}
 \par
-网络编码自出现以来就作为一种重要的改善网络性能，尤其是无线网络性能的工具。它的主要优势在于能够跨时间、跨流地将数据混合起来。这可以让在lossy信道中的数据传输更为健壮和高效。尽管如此，我们还是很少看见应用网络编码的实际例子，一个主要原因就是如何将网络编码很自然地加入到现有的网络体系中，而不与其冲突。文献\cite{4298308}在对网络编码与现有协议结合中可能出现的问题作出过分析，具体到TCP来说，就是寻找一种能够与现有的TCP的滑动窗口兼容的编码机制。
+网络编码自出现以来就作为一种重要的改善网络性能，尤其是无线网络性能的工具。它的主要优势在于能够跨时间、跨流地将数据混合起来。这可以让在lossy信道中的数据传输更为健壮和高效。尽管如此，我们还是很少看见应用网络编码的实际例子，一个主要原因就是如何将网络编码很自然地加入到现有的网络体系中，而不与其冲突。
+%文献\cite{4298308}阐述了反馈如何应用到网络编码中，具体到TCP来说，就是如何利用原有的ACK机制作为我们的网络编码的反馈。
 \par
 Sundararajan等人在“Network Coding Meets TCP”\textsuperscript{\cite{Sundararajan2009}}一文中提出编码TCP协议（ TCP/NC），用于提高标准TCP协议在无线网络环境下的性能。其通过在TCP层和IP层之间添加一个网络编码层来掩盖lossy信道中出现的随机丢包。与以往一些学者在改进TCP在无线网络下性能的工作不同的是，TCP/NC不需要对原有的OSI协议栈做出修改。TCP/NC可以很优雅地与标准TCP协议，IP协议，链路层的协议一起工作，不会与原有协议的机制冲突，适合大规模地部署在现有互联网体系中。
 \par
