--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -835,4 +835,18 @@ TCP-Vegas使用RTT估计拥塞，但tcp/nc掩盖丢包的时候
   publisher = {ACM},
 }
 
+@InProceedings{6040415,
+  author    = {J. Li and W. Ge and J. Wang and F. Ran and Z. Meng},
+  title     = {Enhanced Network Coding for TCP in Wireless Networks},
+  booktitle = {2011 7th International Conference on Wireless Communications, Networking and Mobile Computing},
+  year      = {2011},
+  pages     = {1-4},
+  month     = {Sept},
+  abstract  = {In order to improve the TCP performance in wireless networks, J.K.Sundararajan et al proposed a new protocol based on network coding which is called TCP/NC in [1,2]. But the asynchronism in data transmission and decoding operation which may seriously affect the TCP/NC performance was not considered. To address this issue, a revised protocol TCP/NCW is proposed in this paper. In our scheme, the coding window is adjusted according to the decoding time and will finally reach an optimal window size. This scheme can ensure the synchronization of data transfer and decoding operation, resulting in better performance. Simulation results with NS-2 show that TCP/NCW achieves significant improvement in throughput compared to both TCP-Vegas and TCP/NC in lossy wireless networks.},
+  doi       = {10.1109/wicom.2011.6040415},
+  file      = {:enhanced network coding for tcp in wireless networks.pdf:PDF},
+  issn      = {2161-9646},
+  keywords  = {decoding;network coding;radio networks;transport protocols;NS-2 simulation;TCP-NC perfomance;TCP-Vegas;data transfer synchronization;data transmission;decoding operation;enhanced network coding;lossy wireless networks;transport protocol;Decoding;Encoding;Network coding;Protocols;Receivers;Throughput;Wireless communication, rank4},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
