--- a/preface/cabstract.tex
+++ b/preface/cabstract.tex
@@ -14,7 +14,7 @@
 	\par
 	本文分析了传统TCP协议在无线网络中所面临的问题，对近些年来改善无线网络中TCP性能的相关工作进行了梳理。
 	介绍了网络编码原理，尤其是随机线性网络编码。对于batch-coding和pipeline-coding进行了比较，分析了其应用场景和优缺点。
-	在以上基础上，结合TCP协议特点，如滑动窗口，设计实现了编码TCP协议，并将其移植入嵌入式设备。在真实丢包网络中，对编码TCP进行性能测试，与TCP-vegas协议进行性能对比，分析影响其性能的关键因素。在了解现有编码TCP协议不足的情形下，对其做了进一步改进。提出了一种新的自适应冗余算法，用于更好地应对网络状况的波动，适应不同丢包率的网络；借鉴MAC层的ARQ协议，设计了编码层的反馈重传机制，可以有效减少解码时延，减小编码端缓存队列长度，抵抗突发丢包。
+	在以上基础上，结合TCP协议特点，如滑动窗口，设计实现了编码TCP协议，并将其移植入嵌入式设备。在真实丢包网络中，对编码TCP进行性能测试，与TCP-Reno协议进行性能对比，分析影响其性能的关键因素。在了解现有编码TCP协议不足的情形下，对其做了进一步改进。提出了一种新的自适应冗余算法，用于更好地应对网络状况的波动，适应不同丢包率的网络；借鉴MAC层的ARQ协议，设计了编码层的反馈重传机制，可以有效减少解码时延，减小编码端缓存队列长度，抵抗突发丢包。
 	\par
 	
 }
