--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -849,4 +849,14 @@ TCP-Vegas使用RTT估计拥塞，但tcp/nc掩盖丢包的时候
   keywords  = {decoding;network coding;radio networks;transport protocols;NS-2 simulation;TCP-NC perfomance;TCP-Vegas;data transfer synchronization;data transmission;decoding operation;enhanced network coding;lossy wireless networks;transport protocol;Decoding;Encoding;Network coding;Protocols;Receivers;Throughput;Wireless communication, rank4},
 }
 
+@Article{nguyen2017tcp,
+  author    = {Nguyen, VIET and KUMAZOE, Kazumi and TSURU, Masato},
+  title     = {TCP Network Coding with Enhanced Retransmission for heavy and bursty loss},
+  journal   = {IEICE Transactions on Communications},
+  year      = {2017},
+  pages     = {2016EBP3101},
+  file      = {:TCP Network Coding with Enhanced Retransmission for Heavy and Bursty Loss.pdf:PDF},
+  publisher = {The Institute of Electronics, Information and Communication Engineers},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
