第四章架构搭好

--- a/content/chap02.tex
+++ b/content/chap02.tex
@@ -158,7 +158,7 @@ c = \sum\limits_{j = 1}^k {{e_j}{p_{i \times k + j}}}
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=6in]{figures/batchundecode.eps}
-\caption{Batch Coding 例子}
+\caption{Batch Coding 例子：不可解}
 \label{BATCHUNDECODE_EPS}
 \end{figure}
 \par
